# klangstrom-arduino

./: .gitignore  Gemfile  PROJECTS-INCLUDED.md  README.md  RELEASE_NOTES.md  about.md  build-library.sh  build.sh  index.md  install.sh  package_klangstrom-arduino-desktop_index.json  package_klangstrom-arduino-desktop_index.json.template  package_klangstrom-arduino-stm32_index.json  package_klangstrom-arduino-stm32_index.json.template  package_klangstrom_index.json
Klangstrom/: CMakeLists.txt
Klangstrom/examples/advanced/AudioCodecKlangwellen/: AudioCodecKlangwellen.ino
Klangstrom/examples/advanced/DisplayAnimation/: DisplayAnimation.ino  KLST--ICON--128x128.h
Klangstrom/examples/advanced/DrawText/: DrawText.ino
Klangstrom/examples/advanced/KeyCustom/: KeyCustom.ino  KlangstromConfigurationCustom.h
Klangstrom/examples/advanced/SDCardAudioStream/: AudioStreamFloat32.h  SDCardAudioStream.ino
Klangstrom/src/: ArrayList.h  AudioBlock.h  AudioDevice.h  Beat.cpp  Beat.h  BitmapFont.h  Console.cpp  DACADC.h  Display.cpp  DisplayDrawInterface.h  Draw.cpp  Draw.h  GPIOListener.h  KLSTFont.h  KLSTFont_8x12.h  KLSTFont_8x8.h  Key.cpp  Klangstrom.h  KlangstromConfiguration.h  KlangstromEnvironment.h  LED.h  MIDI.cpp  MIDI.h  Point.h  SDCard.h  SerialDevice.h  System.h  TaskScheduler.h  Timer.cpp  TouchEvent.h  font16.c  font24.c  font8.c
Klangstrom_KLST_EMU/: .clang-format  CMakeLists.txt  library.properties
Klangstrom_KLST_EMU/src/: AudioDevice_EMU.cpp  Encoder_EMU.cpp  Key_EMU.h  KlangstromEmulatorClient.cpp  SerialDevice_EMU.cpp  Timer_EMU.cpp  tinydir.h  tinyfiledialogs.cpp
Klangstrom_KLST_EMU/src/osc/: OscOutboundPacketStream.cpp  OscReceivedElements.cpp  OscTypes.cpp  UdpSocket.cpp
Klangstrom_KLST_PANDA_STM32_CubeMX/: CMakeLists.txt  README.md
Klangstrom_KLST_PANDA_STM32_CubeMX/src/: adc.c  bdma.h  dac.h  dfsdm.c  dfsdm.h  diskio.c  diskio.h  dma.c  dma2d.c  dma2d.h  fatfs.h  fatfs_platform.c  fatfs_platform.h  ff_gen_drv.c  ffconf.h  gpio.c  gpio.h  i2c.c  i2c.h  main.c  main.h  octospi.c  octospi.h  sai.c  sai.h  sd_diskio.h  sdmmc.c  spi.c  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.c  sysmem.c  tim.h  usart.h
USBHost/: CMakeLists.txt  README.md  library.properties
USBHost/examples/USBHost/: USBHost.ino
USBHost/src/: HID_application.h  MIDI_application.cpp  MIDI_interface.h  USBHost.cpp  usbh_MIDI.c  usbh_conf.h  usbh_core.h  usbh_ctlreq.h  usbh_hid_keybd.h  usbh_hid_mouse.c  usbh_hid_mouse.h  usbh_hid_parser.c  usbh_hid_parser.h  usbh_hid_usage.h  usbh_ioreq.h  usbh_pipes.c
libraries/Klangstrom_KLST_PANDA_STM32/: CMakeLists.txt  library.properties
libraries/Klangstrom_KLST_PANDA_STM32/src/: DACADC_KLST_PANDA.cpp  DMAMemoryAllocator.h  DisplayDraw_DAM2D_KLST_PANDA.cpp  DisplayDraw_Software.cpp  Encoder_STM32.h  FT5206.h  PeripheralConfiguration_KLST_CATERPILLAR_STM32.h  PeripheralConfiguration_STM32.h  SDCard_STM32.cpp  SystemExternalMemory_KLST_PANDA.cpp  SystemExternalMemory_KLST_PANDA.h  System_STM32.cpp  System_STM32.h  Timer_STM32.h  WM8904.cpp  WM8904.h
(+1735 files in other folders)
